[gd_scene load_steps=2 format=3 uid="uid://bi6qkwbpncbea"]

[ext_resource type="Script" uid="uid://cdvbq6g4rs3i" path="res://Scripts/UIs/TitleScreen.gd" id="1_uebgo"]

[node name="TitleScreen" type="CanvasLayer"]
layer = 200
script = ExtResource("1_uebgo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.47500002
anchor_top = 0.44400004
anchor_right = 0.47500002
anchor_bottom = 0.44400004
offset_left = -102.400024
offset_top = 0.25598145
offset_right = 153.59998
offset_bottom = 332.25598
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 5

[node name="Start" type="Button" parent="Control/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
z_index = 10
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../../MarginContainer4/Quit")
mouse_filter = 1
text = "PARA_Start"
icon_alignment = 1

[node name="MarginContainer2" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 5

[node name="Continue" type="Button" parent="Control/MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
z_index = 10
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "PARA_Continue"
icon_alignment = 1

[node name="MarginContainer3" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 5

[node name="Settings" type="Button" parent="Control/MarginContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
z_index = 10
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "PARA_Config"
icon_alignment = 1

[node name="MarginContainer4" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 5

[node name="Quit" type="Button" parent="Control/MarginContainer/VBoxContainer/MarginContainer4"]
unique_name_in_owner = true
z_index = 10
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../../MarginContainer/Start")
mouse_filter = 1
text = "PARA_Quit"
icon_alignment = 1

[connection signal="mouse_exited" from="Control/MarginContainer/VBoxContainer/MarginContainer/Start" to="." method="_on_start_mouse_exited"]
[connection signal="mouse_exited" from="Control/MarginContainer/VBoxContainer/MarginContainer2/Continue" to="." method="_on_continue_mouse_exited"]
[connection signal="mouse_exited" from="Control/MarginContainer/VBoxContainer/MarginContainer3/Settings" to="." method="_on_settings_mouse_exited"]
[connection signal="mouse_exited" from="Control/MarginContainer/VBoxContainer/MarginContainer4/Quit" to="." method="_on_quit_mouse_exited"]
